# GFM-release

./: .gitignore  LICENSE  README.md  afhq.py  data2fit.py  decode.py  dist4eval.py  img_interp.py  interp_main.py  optim_path.py  pair4vis.py  pyproject.toml  setup.py  test_benchmark.py
gfm/: __init__.py  main_ae.py  main_class_cond.py  train_kernel.py
gfm/dnnlib/: __init__.py
gfm/engine/: __init__.py  engine_ae.py  engine_class_cond.py
gfm/helper/: help.py
gfm/models/: models_class_cond.py
gfm/path/: diag.py  edm.py  edm2.py  flux_wrapper.py  geodesic_interpolation.py  helper.py  mccan.py  metrics.py  sd3_wrapper.py  sd_wrapper.py  sd_wrapper_gemini.py
gfm/util/: datasets.py  dnnlib.py
notebooks/: torus_metrics.ipynb
scripts/: ablate_sd3.sh  build_ablation_grid.py  eval_fid.py  eval_metrics.py  run_abl_comp.sh  run_eval.sh  run_morphbench.py  run_optim.sh  run_optpath.sh  run_optpath_stein_el.sh  run_sd3.sh  run_sigma_abl.sh  test_blip.py  test_blip_prefix.py  test_flux.py  test_grad.py  test_sd.py  test_sd3.py  test_sd_correctness.py
